--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ dependencies = [
     "python-a2a>=0.5.9",
     "python-dotenv>=1.1.1",
     "httpx>=0.27.0",
+    "fastapi>=0.111.0",
+    "uvicorn>=0.30.0",
 ]
